app/assets/stylesheets/blogs.scss
@import './variables.scss';
@import './toggle.scss';
@import './navbar.scss';

.blog-container.container {
  max-width: 900px !important;
}

.blog {
  &-main {
    word-break: break-word;
    overflow-wrap: break-word;
    @media (min-width: 900px) {
      font-size: 18px;
    }
    a,
    a:hover,
    a:focus {
      text-decoration: none;
    }
  }
  &-title {
    display: flex;
    &-icon {
      padding-right: 10px;
      img {
        width: 70px;
        height: 70px;
        @media (min-width: 768px) {
          width: 150px;
          height: 150px;
        }
      }
    }
    &-text {
      &-meta {
        margin: 0.5rem 0;
        font-size: 0.8em;
      }
      h4 {
        line-height: 24px;
        // align the top of the text with the top of the icon
        margin-top: -3px;
      }
    }
    &-topic {
      font-size: 0.8em;
    }
  }
  &-header {
    margin-bottom: 10px;
    &-admin {
      margin-bottom: 10px;
    }
  }

  &-pagination {
    margin-bottom: 4rem;
  }
  &-pagination > .btn {
    border-radius: 2rem;
  }
  // styles for an individual blog post on the show page
  &-meta {
    display: flex;
    flex-wrap: wrap;
    padding-bottom: 0.5rem;
    line-height: 100%;
    font-size: 0.7em;
    // make the meta text fit on one line for small screens
    // TODO: find out if there's an easier way to calculate this
    @media (min-width: 320px) {
      font-size: 0.7em;
    }
    @media (min-width: 340px) {
      font-size: 0.76em;
    }
    @media (min-width: 360px) {
      font-size: 0.81em;
    }
    @media (min-width: 400px) {
      font-size: 0.89em;
    }
    @media (min-width: 440px) {
      font-size: 1em;
    }
    span {
      margin-right: 1rem;
      padding-right: 0.5rem;
    }
  }
  // styles for the index page posts
  &-post {
    transition: 0.15s ease-in-out;
    display: flex;
    padding: 10px 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    @media (min-width: 768px) {
      padding: 15px 10px;
    }
    &-icon {
      padding: 0 10px;
      img {
        width: 40px;
        height: 40px;
        @media (min-width: 768px) {
          width: 50px;
          height: 50px;
        }
      }
    }
    &-body {
      width: 100%;
      h5 {
        font-size: 0.97em;
        margin-bottom: 0px;
        @media (min-width: 768px) {
          font-size: 1.05em;
        }
      }
      &-meta {
        font-weight: 600;
        font-size: 0.7em;
      }
    }
    &-badge {
      display: flex;
      justify-content: center;
      flex-direction: column;
      padding: 0 10px;
    }
    &:hover {
      background-color: rgba(160, 160, 160, 0.1);
    }
  }
}

.blog-post-wrapper {
  a {
    color: unset !important;
  }
}
.blog-admin-actions {
  a,
  i {
    margin: 0 5px;
  }
}

// make badge text smaller and make it not grow too big when using flexbox
.badge {
  padding: 0.5em 0.75em !important;
  font-size: 0.75em !important;
}
.nav-bg {
  height: 0px;
  @media (min-width: 768px) {
    height: 60px;
  }
}

.blog-actions {
  display: flex;
  justify-content: space-between;
}

#share {
  cursor: pointer;
}

// override the navbar colors for just the blog view
#nav.navbar-transparent {
  text-shadow: none !important;
  background: rgba(0, 0, 0, 0) !important;
  .navbar-brand {
    color: unset !important;
  }
  .nav-link {
    color: unset !important;
  }
}
// make the nav only go to the same width as the blogs
#nav .container {
  max-width: 900px !important;
}

